# mnemon

./: .gitignore  AGENTS.md  README.md  pyproject.toml  sandbox-test.txt
.github/workflows/: ci.yml
docs/architecture/: mnemon-brain-architecture-spec.md
docs/launch/: linkedin-post.md
docs/superpowers/plans/: 2026-04-07-fix-mnemon-db-bugs.md  2026-04-08-complete-remaining-changes.md  2026-04-09-memory-strategy-from-repo-research.md
examples/: agent.py  chatbot_with_memory.py  mcp_daemon_server.py  mcp_memory_server.py
frontend/: .gitignore  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/lib/: api.ts  schemas.ts  useDaemonEvents.ts  useNow.ts  utils.ts
frontend/src/store/: ui.ts
frontend/src/styles/: app.scss
scripts/: install-local-cli.sh
src/mnemon/: __init__.py  __main__.py  cli.py  factory.py
src/mnemon/backends/: __init__.py  falkordb_store.py  hnswlib_store.py  igraph_store.py  memory_store.py  qdrant_store.py  sqlite_store.py
src/mnemon/control/: __init__.py  attention.py  goals.py  metacognition.py  orchestrator.py
src/mnemon/core/: __init__.py  bus.py  config.py  exceptions.py  interfaces.py  models.py  registry.py
src/mnemon/daemon/: __init__.py  autonomy.py  capture_policy.py  config.py  identity.py  improve.py  ipc.py  lifecycle.py  loop.py  privacy.py  state.py  (+3 more)
tests/integration/: conftest.py  test_cognitive_cycle.py  test_consolidation_pipeline.py  test_mcp_stdio_contract.py  test_memory_roundtrip.py
tests/unit/: conftest.py  test_backends.py  test_bus.py  test_capture_policy.py  test_cli.py  test_config.py  test_consolidation.py  test_fact_updates.py  test_idle_loop.py  test_improve.py  test_ipc_capture_policy.py  test_ipc_improve.py  test_ipc_pending_tools.py  test_ipc_tool_intent.py  test_mcp_contract.py  test_memory_lifecycle.py  test_memory_scopes.py  test_memory_service.py  test_orchestrator_outcome.py  test_privacy_rules.py  test_profile_model.py  test_replay.py  test_reports.py  test_retrieval_feedback.py  test_reward.py  test_scenario_reports.py  test_semantic_memory.py  test_sensory.py  test_webui_files.py  test_working_memory.py  test_workspace_tools.py
(+54 files in other folders)
